Working in Create venta